# circuitz-backend

./: .gitignore  .prettierrc.json  Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  webpack.config.js
scripts/: build.sh  did.sh
src/canister/: Cargo.toml  canister_storage.rs  lib.rs
src/canister/lib/types/: circuit.rs  circuit_key.rs  node.rs  user.rs
src/canister/lib/utils/: idempotency.rs  validate.rs
src/canister/modules/circuits/: circuits_controller.rs  circuits_store.rs
src/canister/modules/connectors/: connectors_controller.rs  connectors_store.rs
src/canister/modules/nodes/: nodes_controller.rs  nodes_store.rs
src/canister/modules/traces/: traces_controller.rs  traces_store.rs
src/canister/modules/users/: users_controller.rs  users_store.rs
src/canister/storage/: canister_storage.rs
src/circuitz_back_end_backend/: Cargo.toml
src/circuitz_back_end_frontend/src/: index.html  index.js
src/controllers/circuits/: Cargo.toml  circuits_controller.rs  circuits_store.rs  lib.rs
src/controllers/nodes/: Cargo.toml  lib.rs  nodes_controller.rs  nodes_store.rs
src/controllers/traces/: Cargo.toml  lib.rs  traces_controller.rs  traces_store.rs
src/controllers/users/: Cargo.toml  lib.rs  users_controller.rs  users_store.rs
src/lib/: Cargo.toml  canister.rs  conversion.rs  lib.rs  node_server.rs  save_candid.rs  utils.rs  whitelist.rs
src/lib/types/: api_error.rs  circuit.rs  connector.rs  connector_key.rs  icc_node.rs  memory.rs  node.rs  node_pin.rs  node_type_canister.rs  node_type_http_request.rs  node_type_lookup.rs  node_type_mapper.rs  node_type_transformer.rs  notify.rs  trace.rs  trace_key.rs  tuple_variant.rs  user.rs
src/lib/utils/: idempotency.rs  macros.rs  save_candid.rs  validate.rs
src/nodes/: Cargo.toml  canister_storage.rs  lib.rs
src/nodes/modules/nodes/: nodes_controller.rs  nodes_store.rs
