[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"
crate-type = ["lib"]

[dependencies]
candid = "0.8.2"
ic-kit = "0.4.3"
ic-cdk = "0.7.0"
ic-cdk-macros = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

