[package]
name = "nodes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.2"
ic-cdk = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.1"
ic-stable-structures = "0.6.1"
url = "2.5.0"

lib = { path = "../lib" }
