[package]
name = "nodes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[[test]]
name="generate"
path = "lib.rs"

[dependencies]
candid = { version = "0.9.3", features = ["parser"] }
ic-cdk = "0.11.0"
ic-cdk-macros = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.1"
ic-stable-structures = "0.6.0-beta.1"
# idl2json = "0.9.2"
lib = { path = "../../lib" }
